# cinepy

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh  benchmark_result_2025-08-22_14:18:27  makefile  pyproject.toml  python_benchmark.sh  scratch_pad.py
crates/align_from_packed/: Cargo.toml
crates/align_from_packed/src/: lib.rs
crates/cine-core/: Cargo.toml
crates/cine-core/src/: conversions.rs  decompress.rs  errors.rs  exporters.rs  file.rs
crates/cine-py/: Cargo.toml
crates/cine-py/python/cine_py/: __init__.py
crates/cine-py/python/tests/: requirements.txt  test_all.py
crates/cine-py/src/: conversions.rs  decompress.rs  file.rs  lib.rs  lut.rs
crates/cine_core/: Cargo.toml
crates/cine_core/benches/: frame_return_benchmark.rs
crates/cine_core/src/: cine.rs  conversions.rs  decompress.rs  errors.rs  exporters.rs  file.rs  lib.rs
crates/cine_py/: Cargo.toml  pyproject.toml
crates/cine_py/benches/: frame_return_benchmark.rs
crates/cine_py/python/tests/: test_all.py  test_color.py  test_grayscale.py
crates/cine_py/src/: cine.rs  conversions.rs  decompress.rs  errors.rs  file.rs  file_types.rs  lib.rs  lut.rs  wrappers.rs
