cargo-features = ["codegen-backend"]

[profile.dev]
codegen-backend = "cranelift"

[workspace]
members = [
    "crates/align_from_packed", 
    "crates/cine-core", 
    "crates/cine_py"
]
resolver = "3"

[workspace.package] 
authors = ["Michael Durante <michaeldurante@hotmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["phantom", "high", "speed", "camera", "cine"]
homepage = ""
repository = ""
