[package]
name = "align_from_packed"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version= "2", features=["full"] }
quote = "1"
proc-macro2 = "1"