[package]
name = "cine-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
align_from_packed = { path = "../align_from_packed" }
image = "0.25.6"
base64 = "0.22.1"