[package]
name = "cine-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cine_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
align_from_packed = {path="../align_from_packed"}
image = "0.25.6"
