[package]
name = "cine_core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
align_from_packed = { path = "../align_from_packed" }
image = "0.25.6"
base64 = "0.22.1"
bytemuck = "1.23.2"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = { version = "0.9.2" }

[[bench]]
name = "frame_return_benchmark"
harness = false
