[package]
name = "cine_py"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "cine_py"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-build-config = "0.23"
align_from_packed = { path="../align_from_packed" }
image = "0.25.6"

[dev-dependencies]
criterion = { version ="0.5", features = [ "html_reports" ] }
rand = { version = "0.8" }

[[bench]]
name = "frame_return_benchmark"
harness = false
