[package]
name = "cine_py"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "cine_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-build-config = "0.25.1"
numpy = "0.26.0"
align_from_packed = { path = "../align_from_packed" }
cine_core = { path = "../cine_core"}

[dev-dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize", "full"] }

